Some configurations.